infra/k8s/expiration-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-depl
spec:
# Number of pods we want to run
  replicas: 1
# Tell the deplyment how to find all the pods it's going to create
  selector:
    matchLabels:
      app: expiration-redis
# Describe how to create the pods the deplyment will create
  template:
    metadata:
# Specify a label for the pod
      labels:
        app: expiration-redis
# Tell the pod how to behave
    spec:
      containers:
        - name: expiration-redis
# Use the dockerhub official redis image
          image: redis
---
# Create a cluter ip service to allow communication from and only from other things in the cluster
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
# Tell the service how to behave
spec:
# Not specifying type here. The default will be cluster ip.
# Tell the service which pod to gorvern access to
  selector:
# Govern access to pods with the following label
    app: expiration-redis
  ports:
    - name: db
      protocol: TCP
      port: 6379
      targetPort: 6379
