infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
# Number of pods we want to run
  replicas: 1
# Tell the deplyment how to find all the pods it's going to create
  selector:
    matchLabels:
      app: tickets-mongo
# Describe how to create the pods the deplyment will create
  template:
    metadata:
# Specify a label for the pod
      labels:
        app: tickets-mongo
# Tell the pod how to behave
    spec:
      containers:
        - name: tickets-mongo
# Use the dockerhub official mongo image
          image: mongo
---
# Create a cluter ip service to allow communication from and only from other things in the cluster
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
# Tell the service how to behave
spec:
# Not specifying type here. The default will be cluster ip.
# Tell the servie which pod to gorvern access to
  selector:
# Govern access to pods with the following label
    app: tickets-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
